# AdventOfCode

./: .gitignore  LICENSE  README.md  pyproject.toml
Day 1/: day1a.py
advent/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  utils.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py
